--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,6 +35,6 @@ jobs:
         run: yarn test:e2e
 
       - name: Report JUnit test results
-        uses: actions/junit-report@v2
+        uses: actions/action-junit-report@v2
         with:
           test_results: 'junit.xml'
